test/data/semantic-errors/invalid-object-key.ava
var w = { x: 1, true: 2, z: 3 };

w['x'];
